--- a/src/main/resources/static/css/modal.css
+++ b/src/main/resources/static/css/modal.css
@@ -16,12 +16,12 @@
     top: 50%;
     left: 50%;
     width: 300px;
-    height: 170px;
+    height: 220px;
     padding: 40px;
     margin: 0;
 
     text-align: center;
-    color: black;
+    color: #111;
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 0 2px 3px 0 rgba(34, 36, 38, 0.15);
@@ -35,17 +35,21 @@
 
 .review_modal_btn {
     cursor: pointer;
-    color: #000000;
+    color: #111;
+}
+#review_detail_btn {
+    cursor: pointer;
+    color: #111;
 }
 #review_close_btn {
     cursor: pointer;
     color: #999;
 }
-#review_hide_btn{
+#review_hide_btn {
     cursor: pointer;
     color: red;
 }
-#review_del_btn{
+#review_del_btn {
     cursor: pointer;
     color: red;
 }
