--- a/src/main/resources/templates/memberHome.html
+++ b/src/main/resources/templates/memberHome.html
@@ -5,7 +5,7 @@
 <head layout:fragment="head">
     <title>홈 화면</title>
     <link href="/css/profile.css" rel="stylesheet" />
-    <link href="/css/modal.css" rel="stylesheet" />
+    <link href="/css/review_modal.css" rel="stylesheet" />
     <style>
         .container {
             width: 800px;
@@ -41,14 +41,10 @@
             <img th:src="|/members/${member.memId}/profileImg|" alt="프로필이미지">
         </div>
         <button th:if="${session.loginMember?.memId == member.memId}"> 프로필 편집 </button>
-        <form th:action="|/members/${member.memId}/block|" th:method="post">
-            <button th:if="${session.loginMember?.memId != member.memId && !blockState}" type="submit">
-                차단하기</button>
-        </form>
-        <form th:action="|/members/${member.memId}/cancelBlock|" th:method="post">
-            <input type="hidden" name="loginMemId" th:value="${session.loginMember?.memId}">
-            <button th:if="${blockState}" type="submit">
-                차단해제</button>
+        <button id="block_btn" th:if="${session.loginMember?.memId != member.memId && !blockState}" type="button">
+            차단하기</button>
+        <button id="block_cancel_btn" th:if="${blockState}" type="button">
+            차단해제</button>
         </form>
     </div>
     <hr>
@@ -111,13 +107,13 @@
                 <div class="col-sm" th:if="${session.loginMember != null && review.buyer != null}">
                     <a class="review_modal_btn"
                        th:if="${session.loginMember.memId.equals(memId)}"
-                       th:data-reviewWho="seller"
+                       th:data-reviewedWho="seller"
                        th:data-reviewId="${review.reviewSellerId}">
                         <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
                     </a>
                     <a class="review_modal_btn"
                        th:if="${session.loginMember.memId.equals(review.buyer.memId)}"
-                       th:data-reviewWho="seller"
+                       th:data-reviewedWho="seller"
                        th:data-reviewId="${review.reviewSellerId}">
                         <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
                     </a>
@@ -125,13 +121,13 @@
                 <div class="col-sm" th:if="${session.loginMember != null && review.seller != null}">
                     <a class="review_modal_btn"
                        th:if="${session.loginMember.memId.equals(memId)}"
-                       th:data-reviewWho="buyer"
+                       th:data-reviewedWho="buyer"
                        th:data-reviewId="${review.reviewBuyerId}">
                         <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
                     </a>
                     <a class="review_modal_btn"
                        th:if="${session.loginMember.memId.equals(review.seller.memId)}"
-                       th:data-reviewWho="buyer"
+                       th:data-reviewedWho="buyer"
                        th:data-reviewId="${review.reviewBuyerId}">
                         <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
                     </a>
@@ -155,99 +151,54 @@
 </div>
 
 <div layout:fragment="script">
-    <script src="/js/modal.js"></script>
+    <script src="/js/review_modal.js"></script>
     <script th:inline="javascript">
-        const detailBtn = document.getElementById("review_detail_btn");
-        detailBtn.addEventListener('click', () => {
-            if(reviewWho=="seller") {
-                location.href=`/reviews/seller/${reviewId}`;
-            } else if(reviewWho=="buyer") {
-                location.href=`/reviews/buyer/${reviewId}`;
-            }
-        })
+        // $('#block_btn').ready(function(){
+            $("#block_btn").on("click", block);
+        // });
+        function block() {
+            console.log("블락버튼누름")
+            if (!blockConfirm()) { return; }
+            let blockWho = [[${member.memId}]];
+            $.ajax({
+                type: 'post',
+                url: '/block/'+blockWho,
+                data: {blockWho: blockWho},
+                success: function (data) {
+                    alert("차단에 성공했습니다.");
+                    location.reload();
+                },
+                error: function (err) {
+                    console.log(err);
+                    alert("차단에 실패했습니다.");
+                }
+            })
 
-        const hideBtn = document.getElementById("review_hide_btn");
-        if(hideBtn) {
-            hideBtn.addEventListener('click', hideReview);
-        }
-        const delBtn = document.getElementById("review_del_btn");
-        if(delBtn) {
-            delBtn.addEventListener('click', deleteReview);
-        }
-        function hideReview() {
-            if (!hideConfirm()) {
-                return;
-            }
-            if(reviewWho=="seller") {
-                $.ajax({
-                    type: 'post',
-                    url: '/reviews/seller/hide',
-                    data: {reviewSellerId : reviewId},
-                    success: function (data) {
-                        alert("숨김에 성공했습니다");
-                        location.reload();
-                    },
-                    error: function (err) {
-                        console.log(err);
-                        alert("리뷰를 숨길 수 없습니다.");
-                    }
-                })
-            } else if (reviewWho=="buyer"){
-                $.ajax({
-                    type: 'post',
-                    url: '/reviews/buyer/hide',
-                    data:  {reviewBuyerId : reviewId},
-                    success: function (data) {
-                        alert("숨김에 성공했습니다.");
-                        location.reload();
-                    },
-                    error: function (err) {
-                        console.log(err);
-                        alert("리뷰를 숨길 수 없습니다.");
-                    }
-                })
-            }
-        }
-        function deleteReview() {
-            if (!deleteConfirm()) {
-                return;
-            }
-            if (reviewWho == "seller") {
-                $.ajax({
-                    type: 'delete',
-                    url: '/reviews/seller/' + reviewId,
-                    success: function (data) {
-                        alert("삭제에 성공했습니다");
-                        location.reload();
-                    },
-                    error: function (err) {
-                        console.log(err);
-                        alert("리뷰를 삭제할 수 없습니다");
-                    }
-                })
-            } else if (reviewWho == "buyer") {
-                $.ajax({
-                    type: 'delete',
-                    url: '/reviews/buyer/' + reviewId,
-                    success: function (data) {
-                        alert("삭제에 성공했습니다");
-                        location.reload();
-                    },
-                    error: function (err) {
-                        console.log(err);
-                        alert("리뷰를 삭제할 수 없습니다");
-                    }
-                })
-            }
-        }
-
-        function hideConfirm() {
-            return confirm("거래 후기를 숨기시겠습니까? 숨기면 다시 되돌릴 수 없습니다.");
-        }
-        function deleteConfirm() {
-            return confirm("거래 후기를 삭제하시겠습니까?");
         }
 
 
+        // $('#block_cancel_btn').ready(function(){
+            $("#block_cancel_btn").on("click", cancelBlock);
+        // });
+        function cancelBlock(){
+            let blockCancelWho = [[${member.memId}]];
+            $.ajax({
+                type: 'delete',
+                url: '/block/'+blockCancelWho,
+                data: {blockWho: blockCancelWho},
+                success: function (data) {
+                    alert("차단을 해제했습니다");
+                    location.reload();
+                },
+                error: function (err) {
+                    console.log(err);
+                    alert("차단에 실패했습니다.");
+                }
+            })
+        }
+        function blockConfirm() {
+            return confirm("차단시 서로의 게시글을 확인하거나 채팅을 할 수 없어요. 차단하실래요?");
+        }
     </script>
+
 </div>
