--- a/src/main/resources/templates/review/mannerDetail.html
+++ b/src/main/resources/templates/review/mannerDetail.html
@@ -52,6 +52,5 @@
 </div>
 
 <div layout:fragment="script" th:inline="javascript">
-<script th:inline="javascript">
-</script>
+<script th:inline="javascript"></script>
 </div>
