--- a/src/main/resources/templates/review/publicReviewDetail.html
+++ b/src/main/resources/templates/review/publicReviewDetail.html
@@ -8,7 +8,7 @@
     <link th:href="@{/css/bootstrap.min.css}"
           href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/profile.css" rel="stylesheet" />
-    <link href="/css/modal.css" rel="stylesheet" />
+    <link href="/css/review_modal.css" rel="stylesheet" />
     <style>
         .form-container {
             max-width: 800px;
@@ -27,89 +27,179 @@
         <h2>거래 후기 상세</h2>
     </div>
 
-    <div>
+    <div style="margin-bottom: 10px;">
         <button id="allReview_btn">전체 후기</button>
         <button id="buyerReview_btn">판매자 후기</button>
         <button id="sellerReview_btn">구매자 후기</button>
     </div>
 
     <div id="allReviews">
-        <th:block th:if="${messageMap['allMessages'].isEmpty()}">
+        <div th:if="${messageMap['allMessages'].isEmpty()}">
             <div> 받은 거래 후기가 없습니다.</div>
-        </th:block>
+        </div>
         <div th:unless="${messageMap['allMessages'].isEmpty()}">
             <div>
-                <h6 th:text="|전체 후기 ${countMap['allCount']}개|" id="count"></h6>
+                <h6 th:text="|전체 후기 ${messageMap['allMessages'].size()}개|" id="count"></h6>
             </div>
             <hr/>
             <div class="row" th:each="review:${messageMap['allMessages']}">
-                 <div class="col row" th:if="${review.buyer != null}">
-                     <div class="col-sm-5 profile-img">
-                         <a th:href="@{/home/{memId}(memId=${review.buyer.memId})}">
-                             <img th:src="|/members/${review.buyer.memId}/profileImg|" alt="프로필이미지">
-                         </a>
-                     </div>
-                     <div class="col-md-8">
-                         <p th:text="|${review.buyer.nickname}|"></p>
-                         <span th:text="|${review.buyer.loc.locName} - 구매자 - ${review.createdTime}|"></span>
-                         <p th:utext="${review.message}"></p>
-                     </div>
-                     <div class="col-sm">
-                         <a id="review_modal_btn"
-                            th:if="${session.loginMember != null &&  session.loginMember.memId.equals(memId)}">
-                             <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
-                         </a>
-                     </div>
-                 </div>
-                <div class="col row" th:if="${review.seller != null}">
-                    <div class="col-sm-5 profile-img">
-                        <a th:href="@{/home/{memId}(memId=${review.seller.memId})}">
+                <div class="col-sm-1">
+                    <div class="profile-img">
+                        <a th:if="${review.buyer != null}"
+                           th:href="@{/home/{memId}(memId=${review.buyer?.memId})}">
+                            <img th:src="|/members/${review.buyer?.memId}/profileImg|" alt="프로필이미지">
+                        </a>
+                        <a th:if="${review.seller != null}"  class="profile-img"
+                           th:href="@{/home/{memId}(memId=${review.seller.memId})}">
                             <img th:src="|/members/${review.seller.memId}/profileImg|" alt="프로필이미지">
                         </a>
                     </div>
-                    <div class="col-md-8">
+                </div>
+                <div class="col-lg">
+                    <div th:if="${review.buyer != null}" >
+                        <p th:text="|${review.buyer.nickname}|"></p>
+                        <span th:text="|${review.buyer.loc.locName} - 구매자 - ${review.createdTime}|"></span>
+                        <p th:utext="${review.message}"></p>
+                    </div>
+                    <div th:if="${review.seller != null}">
                         <p th:text="|${review.seller.nickname}|"></p>
                         <span th:text="|${review.seller.loc.locName} - 판매자 - ${review.createdTime}|"></span>
                         <p th:utext="${review.message}"></p>
                     </div>
-                    <div class="col-sm">
-                        <a id="review_modal_btn2"
-                           th:if="${session.loginMember != null && session.loginMember.memId.equals(memId)}">
-                            <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
+                </div>
+                <!--setting 버튼-->
+                <div class="col-sm" th:if="${session.loginMember != null && review.buyer != null}">
+                    <a class="review_modal_btn"
+                       th:if="${session.loginMember.memId.equals(memId)}"
+                       th:data-reviewedWho="seller"
+                       th:data-reviewId="${review.reviewSellerId}">
+                        <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
+                    </a>
+                    <a class="review_modal_btn"
+                       th:if="${session.loginMember.memId.equals(review.buyer.memId)}"
+                       th:data-reviewedWho="seller"
+                       th:data-reviewId="${review.reviewSellerId}">
+                        <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
+                    </a>
+                </div>
+                <div class="col-sm" th:if="${session.loginMember != null && review.seller != null}">
+                    <a class="review_modal_btn"
+                       th:if="${session.loginMember.memId.equals(memId)}"
+                       th:data-reviewedWho="buyer"
+                       th:data-reviewId="${review.reviewBuyerId}">
+                        <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
+                    </a>
+                    <a class="review_modal_btn"
+                       th:if="${session.loginMember.memId.equals(review.seller.memId)}"
+                       th:data-reviewedWho="buyer"
+                       th:data-reviewId="${review.reviewBuyerId}">
+                        <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
+                    </a>
+                </div>
+                <!--setting 버튼-->
+                <hr/>
+            </div><!--each allReviews-->
+        </div><!--not Empty-->
+    </div><!--allReviews-->
+
+
+    <div id="sellerReviews">
+        <div th:if="${messageMap['sellerMessages'].isEmpty()}">
+            <div>구매자 후기가 없어요</div>
+        </div>
+        <div th:unless="${messageMap['sellerMessages'].isEmpty()}">
+            <div>
+                <h6 th:text="|구매자 후기 ${messageMap['sellerMessages'].size()}개|"></h6>
+            </div>
+            <hr/>
+            <div class="row" th:each="review:${messageMap['sellerMessages']}">
+                <div class="col-sm-1">
+                    <div class="profile-img">
+                        <a  class="profile-img"
+                           th:href="@{/home/{memId}(memId=${review.buyer.memId})}">
+                            <img th:src="|/members/${review.buyer.memId}/profileImg|" alt="프로필이미지">
                         </a>
                     </div>
                 </div>
+                <div class="col-lg">
+                    <p th:text="|${review.buyer.nickname}|"></p>
+                    <span th:text="|${review.buyer.loc.locName} - 구매자 - ${review.createdTime}|"></span>
+                    <p th:utext="${review.message}"></p>
+                </div>
+                <!--setting 버튼-->
+                <div class="col-sm" th:if="${session.loginMember != null}">
+                    <a class="review_modal_btn"
+                       th:if="${session.loginMember.memId.equals(memId)}"
+                       th:data-reviewedWho="seller"
+                       th:data-reviewId="${review.reviewSellerId}">
+                        <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
+                    </a>
+                    <a class="review_modal_btn"
+                       th:if="${session.loginMember.memId.equals(review.buyer.memId)}"
+                       th:data-reviewedWho="seller"
+                       th:data-reviewId="${review.reviewSellerId}">
+                        <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
+                    </a>
+                </div>
+                <!--setting 버튼-->
                 <hr/>
-            </div>
-        </div>
-    </div>
-
-    <div id="sellerReviews">
-        <th:block th:if="${messageMap['sellerMessages'].isEmpty()}">
-            <div>구매자 후기가 없어요</div>
-        </th:block>
-        <div th:unless="${messageMap['sellerMessages'].isEmpty()}">
-            <div>
-                <h6 th:text="|구매자 후기 ${countMap['sellerCount']}개|"></h6>
-            </div>
-        </div>
-    </div>
+            </div> <!--each sellerReviews-->
+        </div><!--not Empty-->
+    </div><!--sellerReviews-->
 
     <div id="buyerReviews">
-        <th:block th:if="${messageMap['buyerMessages'].isEmpty()}">
+        <div th:if="${messageMap['buyerMessages'].isEmpty()}">
             <div>판매자 후기가 없어요</div>
-        </th:block>
-        <th:block th:unless="${messageMap['buyerMessages'].isEmpty()}">
+        </div>
+        <div th:unless="${messageMap['buyerMessages'].isEmpty()}">
             <div>
-                <h6 th:text="|판매자 후기 ${countMap['buyerCount']}개|"></h6>
+                <h6 th:text="|판매자 후기 ${messageMap['buyerMessages'].size()}개|"></h6>
             </div>
-        </th:block>
-    </div>
+            <hr/>
+            <div class="row" th:each="review:${messageMap['buyerMessages']}">
+                <div class="col-sm-1">
+                    <div class="profile-img">
+                        <a th:href="@{/home/{memId}(memId=${review.seller.memId})}">
+                            <img th:src="|/members/${review.seller.memId}/profileImg|" alt="프로필이미지">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg">
+                    <p th:text="|${review.seller.nickname}|"></p>
+                    <span th:text="|${review.seller.loc.locName} - 판매자 - ${review.createdTime}|"></span>
+                    <p th:utext="${review.message}"></p>
+                </div>
+                <!-- setting 버튼-->
+                <div class="col-sm" th:if="${session.loginMember != null}">
+                    <a class="review_modal_btn"
+                       th:if="${session.loginMember.memId.equals(memId)}"
+                       th:data-reviewedWho="buyer"
+                       th:data-reviewId="${review.reviewBuyerId}">
+                        <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
+                    </a>
+                    <a class="review_modal_btn"
+                       th:if="${session.loginMember.memId.equals(review.seller.memId)}"
+                       th:data-reviewedWho="buyer"
+                       th:data-reviewId="${review.reviewBuyerId}">
+                        <i class="fa-solid fa-ellipsis-vertical fa-xs"></i>
+                    </a>
+                </div>
+               <!-- setting 버튼-->
+                <hr/>
+            </div><!--each buyerReviews-->
+        </div><!--not Empty-->
+    </div><!--buyerReviews-->
 
 </div> <!-- /form-container -->
+<!--리뷰 모달-->
 <div class="reviewModal review_modal">
     <div class="review_modal_body">
-        <a id="review_delete_btn">리뷰 삭제</a>
+        <a id="review_hide_btn" th:if="${session.loginMember != null && session.loginMember.memId.equals(memId)}">
+            리뷰 숨김</a>
+        <a id="review_del_btn" th:if="${session.loginMember != null && !session.loginMember.memId.equals(memId)}">
+            리뷰 삭제</a>
+        <hr/>
+        <a id="review_detail_btn">리뷰 보기</a>
         <hr/>
         <a id="review_close_btn">취소</a>
     </div>
@@ -117,31 +207,29 @@
 </div>
 
 <div layout:fragment="script">
-    <script src="/js/modal.js"></script>
+    <script src="/js/review_modal.js"></script>
     <script th:inline="javascript">
-        const buyerMessages = document.getElementById("buyerMessages");
-        const sellerMessages = document.getElementById("sellerMessages");
-
-        const reviewAll = [[${countMap['reviewAll']}]];
-        const reviewSeller = [[${countMap['reviewSeller']}]];
-        const reviewBuyer= [[${countMap['reviewBuyer']}]];
-/*        function allReview() {
-            buyerMessages.style.display = "block";
-            sellerMessages.style.display = "block";
-            $("#count").replaceWith(`<h6 text="전체 리뷰 ${reviewAll}개" id="count"></h6>`)
+        //탭전환
+        const allReviews = document.getElementById("allReviews");
+        const buyerReviews = document.getElementById("buyerReviews");
+        const sellerReviews = document.getElementById("sellerReviews");
+        function allReview() {
+            allReviews.style.display = "block";
+            buyerReviews.style.display = "none";
+            sellerReviews.style.display = "none";
         }
         function sellerReview() {
-            sellerMessages.style.display = "block";
-            buyerMessages.style.display = "none";
-            $("#count").replaceWith(`<h6 text="전체 리뷰 ${reviewBuyer}개" id="count"></h6>`)
+            allReviews.style.display = "none";
+            buyerReviews.style.display = "none";
+            sellerReviews.style.display = "block";
         }
         function buyerReview() {
-            sellerMessages.style.display = "none";
-            buyerMessages.style.display = "block";
-            $("#count").replaceWith(`<h6 text="전체 리뷰 ${reviewSeller}개" id="count"></h6>`)
-        }*/
-        /*document.getElementById("allReview_btn").addEventListener('click', allReview);
+            allReviews.style.display = "none";
+            buyerReviews.style.display = "block";
+            sellerReviews.style.display = "none";
+        }
+        document.getElementById("allReview_btn").addEventListener('click', allReview);
         document.getElementById("sellerReview_btn").addEventListener('click', sellerReview);
-        document.getElementById("buyerReview_btn").addEventListener('click', buyerReview);*/
+        document.getElementById("buyerReview_btn").addEventListener('click', buyerReview);
     </script>
 </div>
