--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -118,64 +118,59 @@
 
 <div layout:fragment="script" th:inline="javascript">
     <script th:inline="javascript" >
-
         const buyerDelBtn =document.getElementById('buyerDelBtn')
         if(buyerDelBtn) {
-            buyerDelBtn.addEventListener("click", function () {
-                console.log(buyerDelBtn)
-                if (delConfirm()) {
-                    let reviewBuyerId = [[${reviewDetailForm.reviewBuyerId}]];
-                    let url = '/reviews/buyer/' + reviewBuyerId
-                    fetch(url, {
-                        method: 'DELETE'
-                    }).then(response => {
-                        if (response.ok) {
-                            return response.json();  // HTTP 응답 객체를 JSON으로 변환하여 반환
-                        } else {
-                            throw new Error('서버로부터 응답을 받지 못했습니다.');  // 예외 발생
-                        }
-                    }).then(data => {
-                        alert(data.message);
-                        let me = [[${reviewDetailForm.sellerId}]];
-                        window.location.href = `/members/${me}/transaction/sellList`;
-                    }).catch(err => {
-                        console.log(err);
-                        alert('삭제에 실패했습니다.');
-                    })
+            buyerDelBtn.addEventListener("click", deleteBuyer);
+        }
+        function deleteBuyer() {
+            if (!delConfirm()) { return; }
+            let reviewBuyerId = [[${reviewDetailForm.reviewBuyerId}]];
+            let url = '/reviews/buyer/' + reviewBuyerId
+            fetch(url, {
+                method: 'DELETE'
+            }).then(response => {
+                if (response.ok) {
+                    return response.json();  // HTTP 응답 객체를 JSON으로 변환하여 반환
+                } else {
+                    throw new Error('서버로부터 응답을 받지 못했습니다.');  // 예외 발생
                 }
-            });
+            }).then(data => {
+                alert(data.message);
+                let me = [[${reviewDetailForm.sellerId}]];
+                window.location.href = `/members/${me}/transaction/sellList`;
+            }).catch(err => {
+                console.log(err);
+                alert('삭제에 실패했습니다.');
+            })
         }
 
         const sellerDelBtn = document.getElementById('sellerDelBtn');
         if(sellerDelBtn) {
-            console.log(sellerDelBtn)
-            sellerDelBtn.addEventListener("click", function () {
-                if (!delConfirm()) {
-                    return;
-                }
-                let reviewSellerId = [[${reviewDetailForm.reviewSellerId}]];
-                let url = '/reviews/seller/' + reviewSellerId
-                fetch(url, {
-                    method: 'DELETE'
-                }).then(response => {
-                    if (response.ok) {
-                        return response.json();  // HTTP 응답 객체를 JSON으로 변환하여 반환
-                    } else {
-                        throw new Error('서버로부터 응답을 받지 못했습니다.');  // 예외 발생
-                    }
-                })
-                    .then(data => {
-                        alert(data.message);
-                        let me = [[${reviewDetailForm.buyerId}]];
-                        window.location.href = `/members/${me}/transaction/buyList`
-                    })
-                    .catch(err => {
-                        console.log(err);
-                        alert("삭제에 실패했습니다.")
-                    });
-            })
+            sellerDelBtn.addEventListener("click", deleteSeller);
         }
-
+        function deleteSeller(){
+            if (!delConfirm()) {
+                return;
+            }
+            let reviewSellerId = [[${reviewDetailForm.reviewSellerId}]];
+            let url = '/reviews/seller/' + reviewSellerId
+            fetch(url, {
+                method: 'DELETE'
+            }).then(response => {
+                if (response.ok) {
+                    return response.json();  // HTTP 응답 객체를 JSON으로 변환하여 반환
+                } else {
+                    throw new Error('서버로부터 응답을 받지 못했습니다.');  // 예외 발생
+                }
+            }).then(data => {
+                    alert(data.message);
+                    let me = [[${reviewDetailForm.buyerId}]];
+                    window.location.href = `/members/${me}/transaction/buyList`
+            }).catch(err => {
+                    console.log(err);
+                    alert("삭제에 실패했습니다.")
+            });
+        }
         function delConfirm() {
             return confirm("리뷰를 삭제하시겠습니까?");
         }
