--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -122,6 +122,14 @@
             </div>
         </div>
 
+    <!--거래희망장소-->
+<!--    <section id="mtPlaceSec" class="py-5" th:if="${mtPlace!=null}">-->
+<!--        <div class="container px-4 px-lg-5 mt-5">-->
+<!--            <h2 class="fw-bolder mb-4">거래희망장소</h2>-->
+
+<!--            <div id="map" style="width:100%; height:350px; margin: 0 auto;"></div>-->
+<!--        </div>-->
+<!--    </section>-->
 
 
 
@@ -231,14 +239,13 @@
                 </div>
             </div>
         </section>
-        <!-- Footer-->
-        <footer class="py-5 bg-dark">
-            <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
-        </footer>
+
+
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="/js/scripts.js"></script>
+
 
         <!--사진 박스슬라이더-->
         <script>
@@ -325,10 +332,54 @@
                     }
                 }); //$.ajax
             }
-
-
-
         </script>
+
+    <!--거래희망장소 지도-->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e133f6ea3b90b5b74b80864ba7037219"></script>
+<!--&lt;!&ndash;    <script th:inline="javascript">&ndash;&gt;-->
+<!--       /* const mtPlaceSec = document.getElementById("mtPlaceSec");-->
+<!--        const mapDiv = document.getElementById('map');-->
+<!--        var lat;-->
+<!--        var lon;-->
+<!--        var placeInfo;*/-->
+
+<!--        // if(mtPlaceSec && mapDiv) {-->
+<!--        //     var lat = [[${mtPlace.lat}]];-->
+<!--        //     var lon = [[${mtPlace.lon}]];-->
+<!--        //     var placeInfo = [[${mtPlace.placeInfo}]];-->
+<!--        //-->
+<!--        //     var mapContainer = mapDiv, // 지도를 표시할 div-->
+<!--        //         mapOption = {-->
+<!--        //             center: new kakao.maps.LatLng(lat, lon), // 지도의 중심좌표-->
+<!--        //             level: 3 // 지도의 확대 레벨-->
+<!--        //         };-->
+<!--        //-->
+<!--        //     var map = new kakao.maps.Map(mapContainer, mapOption);-->
+<!--        //-->
+<!--        //     // 마커가 표시될 위치입니다-->
+<!--        //     var markerPosition = new kakao.maps.LatLng(lat, lon);-->
+<!--        //-->
+<!--        //     // 마커를 생성합니다-->
+<!--        //     var marker = new kakao.maps.Marker({-->
+<!--        //         position: markerPosition-->
+<!--        //     });-->
+<!--        //-->
+<!--        //     // 마커가 지도 위에 표시되도록 설정합니다-->
+<!--        //     marker.setMap(map);-->
+<!--        //-->
+<!--        //     var iwContent = `<div style="padding:5px;">${placeInfo} <br><a href="https://map.kakao.com/link/map/Hello World!,${lat},${lon}" style="color:blue" target="_blank">큰지도보기</a> <a href="https://map.kakao.com/link/to/Hello World!,${lat},${lon}" style="color:blue" target="_blank">길찾기</a></div>`, // 인포윈도우에 표출될 내용으로 HTML 문자열이나 document element가 가능합니다-->
+<!--        //         iwPosition = new kakao.maps.LatLng(lat, lon); //인포윈도우 표시 위치입니다-->
+<!--        //-->
+<!--        //     // 인포윈도우를 생성합니다-->
+<!--        //     var infowindow = new kakao.maps.InfoWindow({-->
+<!--        //         position: iwPosition,-->
+<!--        //         content: iwContent-->
+<!--        //     });-->
+<!--        //-->
+<!--        //     // 마커 위에 인포윈도우를 표시합니다. 두번째 파라미터인 marker를 넣어주지 않으면 지도 위에 표시됩니다-->
+<!--        //     infowindow.open(map, marker);-->
+<!--        // }-->
+<!--&lt;!&ndash;    </script>&ndash;&gt;-->
 
     </body>
 </html>
