--- a/src/main/resources/templates/member/loginForm.html
+++ b/src/main/resources/templates/member/loginForm.html
@@ -65,10 +65,56 @@
           <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
         </div>
       </div>
+      <div class="row">
+        <div id="google"></div>
+      </div>
     </form>
   </div> <!-- /form-container -->
 </div>
 
-<script layout:fragment="script" th:inline="javascript">
-</script>
+<div layout:fragment="script" >
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <script src="https://accounts.google.com/gsi/client?hl=kr" async defer></script>
+  <script th:inline="javascript">
+    function handleCredentialResponse(response) {
+      console.log("Encoded JWT ID token: " + response.credential);
+      const responsePayload = decodeJwtResponse(response.credential);
+
+      console.log("ID: " + responsePayload.sub);
+      console.log('Full Name: ' + responsePayload.name);
+      console.log('Given Name: ' + responsePayload.given_name);
+      console.log('Family Name: ' + responsePayload.family_name);
+      console.log("Image URL: " + responsePayload.picture);
+      console.log("Email: " + responsePayload.email);
+    }
+    window.onload = function () {
+      google.accounts.id.initialize({
+        client_id: "365276835581-b5a4fqe0pf342c700r4kb9m3i9bd470h.apps.googleusercontent.com",
+        callback: handleCredentialResponse
+      });
+      google.accounts.id.renderButton(
+              document.getElementById("google"),
+              { theme: "outline", size: "large" }  // customization attributes
+      );
+      google.accounts.id.prompt(); // also display the One Tap dialog
+    }
+    function parseJwt (token) {
+      var base64Url = token.split('.')[1];
+      var base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+      var jsonPayload = decodeURIComponent(atob(base64).split('').map(function(c) {
+        return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+      }).join(''));
+
+      return JSON.parse(jsonPayload);
+    };
+/*    function loginWithGoogle() {
+      $.ajax({
+        url: '/login/getGoogleAuthUrl',
+        type: 'get',
+      }).done(function (res) {
+        location.href = res;
+      });
+    }*/
+  </script>
+</div>
 </html>
